# cse100-pa3

./: 127decode.txt  chinese_encode.txt  compressed1.txt  exceed127_refencode.txt  myCharFile.txt  my_check.txt  my_decode.txt  my_file5_encode.txt  ref_compressed.txt  ref_file2_decode.txt  ref_file2_encode.txt  refcompressed1.txt  reftest.txt  solution-compress.executable  solution-uncompress.executable  test.txt  toOriginal.txt
src/: bitconverter.cpp  compress.cpp  uncompress.cpp
src/bitStream/: CMakeLists.txt
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  CMakeLists.txt
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  CMakeLists.txt
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp
test/: CMakeLists.txt  test_HCTree.cpp
